--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,4 @@
-.main {
+/* .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -128,18 +128,18 @@
   content: '';
   position: absolute;
   z-index: -1;
-}
+} */
 
 /* Conic Gradient Animation */
-.thirteen::before {
+/* .thirteen::before {
   animation: 6s rotate linear infinite;
   width: 200%;
   height: 200%;
   background: var(--tile-border);
-}
+} */
 
 /* Inner Square */
-.thirteen::after {
+/* .thirteen::after {
   inset: 0;
   padding: 1px;
   border-radius: var(--border-radius);
@@ -149,7 +149,7 @@
     rgba(var(--tile-end-rgb), 1)
   );
   background-clip: content-box;
-}
+} */
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
@@ -174,7 +174,7 @@
 }
 
 /* Mobile and Tablet */
-@media (max-width: 1023px) {
+/* @media (max-width: 1023px) {
   .content {
     padding: 4rem;
   }
@@ -268,4 +268,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
