--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,4 @@
-.main {
+/* .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -128,7 +128,7 @@
   content: '';
   position: absolute;
   z-index: -1;
-}
+} */
 
 /* Conic Gradient Animation */
 .thirteen::before {
@@ -174,7 +174,7 @@
 }
 
 /* Mobile and Tablet */
-@media (max-width: 1023px) {
+/* @media (max-width: 1023px) {
   .content {
     padding: 4rem;
   }
@@ -268,4 +268,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
